# yolov5_sdk_shared_lib_generate_and_test

./: README.md
get_demo/: CMakeLists.txt  main.cpp  readme.md
get_lib_shared/: CMakeLists.txt  build.bash  detectJZ.cpp  interface.h  readme.md
